tests/reject/subscript_not_place.ty
# A subscript must `yield &<place>`, not a value.
struct N:
    w: int
subscript bad(g: [N], i: int) -> inout N:
    yield g[i]
fn main():
    print("x")
